# flutter-desktop-embedding

./: BUILD.gn
example/: pubspec.yaml
example/flutter_app/: pubspec.yaml
example/flutter_app/lib/: main.dart
example/lib/: main.dart
example/macos/: Info.plist
example/macos/ExampleEmbedder.xcodeproj/: project.pbxproj
example/macos_fde/: Example Embedder-Bridging-Header.h  ExampleWindow.swift  Info.plist
example/macos_fde/ExampleEmbedder.xcodeproj/: project.pbxproj
example/windows_fde/: GLFW Example.vcxproj  flutter_embedder_example.cpp
plugins/color_panel/macos/FlutterEmbedderColorPanel.xcodeproj/xcuserdata/chinmaygarde.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/common/: BUILD.gn  flutter_library.gni
plugins/file_chooser/macos/FlutterEmbedderFileChooser.xcodeproj/xcuserdata/chinmaygarde.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/flutter_webrtc/: BUILD.gn  pubspec.yaml
plugins/flutter_webrtc/include/: flutter_data_channel.h  flutter_media_stream.h  flutter_peerconnection.h  flutter_video_renderer.h  flutter_webrtc.h  flutter_webrtc_base.h  flutter_webrtc_plugin.h
plugins/flutter_webrtc/lib/: rtc_data_channel.dart  rtc_peerconnection.dart  rtc_video_view.dart  utils.dart
plugins/flutter_webrtc/macos/: FLEWebRTCPlugin.h  FLEWebRTCPlugin.mm  FlutterRTCDataChannel.h  FlutterRTCDataChannel.m  FlutterRTCMediaStream.m  FlutterRTCPeerConnection.m  FlutterRTCVideoRenderer.h  FlutterRTCVideoRenderer.m  FlutterWebRTCPlugin.h  FlutterWebRTCPlugin.m
plugins/flutter_webrtc/macos/FlutterEmbedderWebRTC.xcodeproj/: project.pbxproj
plugins/flutter_webrtc/macos/FlutterEmbedderWebRTC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
plugins/flutter_webrtc/macos/WebRTC.framework/Versions/A/Resources/: Info.plist
plugins/flutter_webrtc/src/: flutter_data_channel.cc  flutter_media_stream.cc  flutter_peerconnection.cc  flutter_video_renderer.cc  flutter_webrtc.cc  flutter_webrtc_base.cc  flutter_webrtc_plugin.cc
plugins/menubar/macos/FlutterEmbedderMenubar.xcodeproj/xcuserdata/chinmaygarde.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/video_player/lib/: video_player.dart
tools/dart_tools/lib/: flutter_artifact_fetcher.dart
