# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/packaging.gni")

published_shared_library("webrtc") {
  output_name = "flutter_embedder_$target_name"

  sources = []
 
  defines = [
    "FLUTTER_WEBRTC_PLUGIN_IMPL",
    "LIB_WEBRTC_API_DLL"
  ]
  
  if (is_linux || is_win) {
    include_dirs = [
            "include",
            "//library/common/client_wrapper/include",
            "third_party/webrtc/include",
        ]
    if(is_win) {
        defines += [ "WEBRTC_WIN", "WIN32" ]
        libs = [
            "third_party/webrtc/lib/x64/libwebrtc.dll.lib",
        ]
    }
    sources += [ 
        "include/flutter_webrtc.h",
        "include/flutter_webrtc_base.h",
        "include/flutter_media_stream.h",
        "include/flutter_peerconnection.h",
        "include/flutter_video_renderer.h",
        "include/flutter_data_channel.h",
        "include/flutter_webrtc_plugin.h",

        "src/flutter_webrtc.cc",
        "src/flutter_webrtc_base.cc",
        "src/flutter_data_channel.cc",
        "src/flutter_media_stream.cc",
        "src/flutter_peerconnection.cc",
        "src/flutter_video_renderer.cc",
        "src/flutter_webrtc_plugin.cc",
    ]
    public = [
      "include/flutter_webrtc_plugin.h",
    ]
    public_header_subdir = "flutter_webrtc"
  }

  deps = [
    "//third_party/jsoncpp",
    "./third_party/uuidxx:uuidxx",
    "//plugins/common:fetch_flutter_library",
    "//plugins/common:flutter_wrapper",
  ]

  if (is_linux) {
    public_header_subdir = "include"
    configs += [
      "//build/linux/config:jsoncpp",
    ]
  }
}
